[gd_scene load_steps=4 format=2]

[ext_resource path="res://prefabs/PlayerBrains.gd" type="Script" id=1]
[ext_resource path="res://assets/square.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.8, 2.8 )

[node name="PlayerHead" type="Sprite"]
modulate = Color( 0.101961, 0.545098, 0.560784, 1 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2.7, -4.76837e-07 )
scale = Vector2( 1.125, 0.4 )
texture = ExtResource( 2 )

[node name="Hitbox" type="Area2D" parent="." groups=["player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -2.38419e-08, 1.19209e-08 )
shape = SubResource( 1 )

[node name="Firerate" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.08
one_shot = true

[node name="SpeedBoost" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 4.0
one_shot = true

[node name="ReloadBoost" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 4.0
one_shot = true

[node name="SegmentHook" type="Position2D" parent="."]
unique_name_in_owner = true
position = Vector2( -8, 0 )

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_entered"]
[connection signal="timeout" from="Firerate" to="." method="_on_firerate_timeout"]
[connection signal="timeout" from="SpeedBoost" to="." method="_on_speed_boost_timeout"]
[connection signal="timeout" from="ReloadBoost" to="." method="_on_reaload_boost_timeout"]
