[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/actors/SpaceWhales/SpaceWhale-01-06b.png" type="Texture" id=1]
[ext_resource path="res://assets/actors/SpaceWhales/SpaceWhale-01-04a.png" type="Texture" id=2]
[ext_resource path="res://assets/actors/SpaceWhales/SpaceWhale-01-01a.png" type="Texture" id=3]
[ext_resource path="res://assets/actors/SpaceWhales/SpaceWhale-01-03b.png" type="Texture" id=4]
[ext_resource path="res://assets/actors/SpaceWhales/SpaceWhale-01-02a.png" type="Texture" id=5]
[ext_resource path="res://assets/actors/SpaceWhales/SpaceWhale-01-02b.png" type="Texture" id=6]
[ext_resource path="res://assets/actors/SpaceWhales/SpaceWhale-01-03a.png" type="Texture" id=7]
[ext_resource path="res://assets/actors/SpaceWhales/SpaceWhale-01-04b.png" type="Texture" id=8]
[ext_resource path="res://assets/actors/SpaceWhales/SpaceWhale-01-01b.png" type="Texture" id=9]
[ext_resource path="res://assets/actors/SpaceWhales/SpaceWhale-01-05b.png" type="Texture" id=10]
[ext_resource path="res://assets/actors/SpaceWhales/SpaceWhale-01-05a.png" type="Texture" id=11]
[ext_resource path="res://assets/actors/SpaceWhales/SpaceWhale-01-06a.png" type="Texture" id=12]
[ext_resource path="res://prefabs/PlayerBrains.gd" type="Script" id=13]
[ext_resource path="res://addons/godot_sfxr/SfxrStreamPlayer2D.gd" type="Script" id=15]
[ext_resource path="res://assets/audio/PlayerBrainsFire.tres" type="AudioStream" id=16]
[ext_resource path="res://prefabs/PlayerSegment.gd" type="Script" id=17]

[sub_resource type="CircleShape2D" id=5]
radius = 6.0

[sub_resource type="CircleShape2D" id=6]
radius = 7.0

[sub_resource type="CircleShape2D" id=7]

[sub_resource type="CircleShape2D" id=8]
radius = 11.0

[sub_resource type="CircleShape2D" id=9]
radius = 11.0

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 5 )

[sub_resource type="CapsuleShape2D" id=4]

[node name="PlayerWhale" type="Node2D"]
modulate = Color( 0.65, 0.65, 0.65, 1 )
position = Vector2( -32, 0 )

[node name="SpaceWhale-01-6" type="Node2D" parent="."]
position = Vector2( -88, 0 )
script = ExtResource( 17 )
lerp_speed = 0.48
target_name = "SpaceWhale-01-5"

[node name="HarvestBox" type="Area2D" parent="SpaceWhale-01-6" groups=["player_segment"]]
position = Vector2( -8, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpaceWhale-01-6/HarvestBox"]
shape = SubResource( 5 )

[node name="SpaceWhale-01-06b" type="Sprite" parent="SpaceWhale-01-6"]
position = Vector2( -13, 0 )
z_index = -4
texture = ExtResource( 1 )

[node name="SpaceWhale-01-06a" type="Sprite" parent="SpaceWhale-01-6"]
position = Vector2( -14, 0 )
z_index = -2
texture = ExtResource( 12 )

[node name="SpaceWhale-01-5" type="Node2D" parent="."]
position = Vector2( -59, 0 )
script = ExtResource( 17 )
lerp_speed = 0.48
turn_speed = 4.8
target_name = "SpaceWhale-01-4"

[node name="HarvestBox" type="Area2D" parent="SpaceWhale-01-5" groups=["player_segment"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpaceWhale-01-5/HarvestBox"]
position = Vector2( -13, 0 )
shape = SubResource( 6 )

[node name="SegmentHook" type="Position2D" parent="SpaceWhale-01-5"]
position = Vector2( -29, 0 )

[node name="SpaceWhale-01-05b" type="Sprite" parent="SpaceWhale-01-5"]
position = Vector2( -13, 0 )
z_index = -4
texture = ExtResource( 10 )

[node name="SpaceWhale-01-05a" type="Sprite" parent="SpaceWhale-01-5"]
position = Vector2( -13, 0 )
z_index = -2
texture = ExtResource( 11 )

[node name="SpaceWhale-01-4" type="Node2D" parent="."]
position = Vector2( -31, 0 )
script = ExtResource( 17 )
lerp_speed = 0.46
turn_speed = 4.2
target_name = "SpaceWhale-01-3"

[node name="HarvestBox" type="Area2D" parent="SpaceWhale-01-4" groups=["player_segment"]]
position = Vector2( -11, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpaceWhale-01-4/HarvestBox"]
shape = SubResource( 7 )

[node name="SegmentHook" type="Position2D" parent="SpaceWhale-01-4"]
position = Vector2( -28, 0 )

[node name="SpaceWhale-01-04b" type="Sprite" parent="SpaceWhale-01-4"]
position = Vector2( -13, 0 )
z_index = -4
texture = ExtResource( 8 )

[node name="SpaceWhale-01-04a" type="Sprite" parent="SpaceWhale-01-4"]
position = Vector2( -13, 0 )
z_index = -2
texture = ExtResource( 2 )

[node name="SpaceWhale-01-3" type="Node2D" parent="."]
script = ExtResource( 17 )
lerp_speed = 0.46
turn_speed = 3.8
target_name = "SpaceWhale-01-2"

[node name="HarvestBox" type="Area2D" parent="SpaceWhale-01-3" groups=["player_segment"]]
position = Vector2( -14, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpaceWhale-01-3/HarvestBox"]
position = Vector2( -1, 0 )
shape = SubResource( 8 )

[node name="SegmentHook" type="Position2D" parent="SpaceWhale-01-3"]
position = Vector2( -31, 0 )

[node name="SpaceWhale-01-03b" type="Sprite" parent="SpaceWhale-01-3"]
position = Vector2( -15, 0 )
z_index = -4
texture = ExtResource( 4 )

[node name="SpaceWhale-01-03a" type="Sprite" parent="SpaceWhale-01-3"]
position = Vector2( -15, 0 )
z_index = -2
texture = ExtResource( 7 )

[node name="SpaceWhale-01-2" type="Node2D" parent="."]
position = Vector2( 29, 0 )
script = ExtResource( 17 )
lerp_speed = 0.42
turn_speed = 3.8
target_name = "SpaceWhale-01-1"

[node name="HarvestBox" type="Area2D" parent="SpaceWhale-01-2" groups=["player_segment"]]
position = Vector2( -15, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpaceWhale-01-2/HarvestBox"]
shape = SubResource( 9 )

[node name="SegmentHook" type="Position2D" parent="SpaceWhale-01-2"]
position = Vector2( -29, 0 )

[node name="SpaceWhale-01-02b" type="Sprite" parent="SpaceWhale-01-2"]
position = Vector2( -15, 0 )
z_index = -4
texture = ExtResource( 6 )

[node name="SpaceWhale-01-02a" type="Sprite" parent="SpaceWhale-01-2"]
position = Vector2( -15, 0 )
z_index = -2
texture = ExtResource( 5 )

[node name="SpaceWhale-01-1" type="Node2D" parent="."]
position = Vector2( 42, 0 )
script = ExtResource( 13 )

[node name="Hitbox" type="Area2D" parent="SpaceWhale-01-1" groups=["player"]]
position = Vector2( -13, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpaceWhale-01-1/Hitbox"]
position = Vector2( 12, 0 )
shape = SubResource( 1 )

[node name="Pickup" type="Area2D" parent="SpaceWhale-01-1" groups=["player_pickup"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpaceWhale-01-1/Pickup"]
visible = false
shape = SubResource( 4 )

[node name="Firerate" type="Timer" parent="SpaceWhale-01-1"]
unique_name_in_owner = true
wait_time = 0.08
one_shot = true

[node name="SpeedBoost" type="Timer" parent="SpaceWhale-01-1"]
unique_name_in_owner = true
wait_time = 4.0
one_shot = true

[node name="FirerateBoost" type="Timer" parent="SpaceWhale-01-1"]
unique_name_in_owner = true
wait_time = 4.0
one_shot = true

[node name="SfxrStreamFire" type="AudioStreamPlayer2D" parent="SpaceWhale-01-1"]
unique_name_in_owner = true
position = Vector2( -130, 0 )
stream = ExtResource( 16 )
volume_db = -8.0
script = ExtResource( 15 )
wave/type = 1
sample_params/sound_vol = 0.25
sample_params/sample_rate = 44100.0
envelope/attack_time = 0.0
envelope/sustain_time = 0.142097
envelope/punch_time = 0.0
envelope/decay_time = 0.0904128
frequency/start_frequency = 0.886872
frequency/min_freq_cutoff = 0.0216335
frequency/slide = -0.520394
frequency/delta_slide = 0.0
vibrato/depth = 0.0
vibrato/speed = 0.0
arpeggiation/frequency_mult = 0.0
arpeggiation/change_speed = 0.0
duty_cycle/duty_cycle = 0.735023
duty_cycle/sweep = -0.188413
retrigger/rate = 0.0
flanger/offset = 0.111519
flanger/sweep = -0.187973
low_pass_filter/cutoff_frequency = 1.0
low_pass_filter/cutoff_sweep = 0.0
low_pass_filter/resonance = 0.0
high_pass_filter/cutoff_frequency = 0.22735
high_pass_filter/cutoff_sweep = 0.0

[node name="SegmentHook" type="Position2D" parent="SpaceWhale-01-1"]
position = Vector2( -13, 0 )

[node name="SpaceWhale-01-01b" type="Sprite" parent="SpaceWhale-01-1"]
z_index = -4
texture = ExtResource( 9 )

[node name="SpaceWhale-01-01a" type="Sprite" parent="SpaceWhale-01-1"]
z_index = -2
texture = ExtResource( 3 )

[connection signal="area_entered" from="SpaceWhale-01-1/Hitbox" to="SpaceWhale-01-1" method="_on_hitbox_entered"]
[connection signal="timeout" from="SpaceWhale-01-1/Firerate" to="SpaceWhale-01-1" method="_on_firerate_timeout"]
[connection signal="timeout" from="SpaceWhale-01-1/SpeedBoost" to="SpaceWhale-01-1" method="_on_speed_boost_timeout"]
[connection signal="timeout" from="SpaceWhale-01-1/FirerateBoost" to="SpaceWhale-01-1" method="_on_reaload_boost_timeout"]
